WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309655
[threaded-animations] Safari 26.4 crashes loading
https://business.southwest.com/apple
https://bugs.webkit.org/show_bug.cgi?id=309655
Summary
[threaded-animations] Safari 26.4 crashes loading https://business.southwest....
Antoine Quint
Reported
2026-03-11 02:33:32 PDT
Loading
https://business.southwest.com/apple
in Safari on the macOS 26.4 beta crashes Safari itself.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2026-03-11 02:33:39 PDT
rdar://170883110
Antoine Quint
Comment 2
2026-03-11 02:44:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60347
EWS
Comment 3
2026-03-11 05:38:02 PDT
Committed
309053@main
(cf8d02e5b70c): <
https://commits.webkit.org/309053@main
> Reviewed commits have been landed. Closing PR #60347 and removing active labels.
EWS
Comment 4
2026-03-11 10:17:37 PDT
Committed
305413.441@safari-7624-branch
(9bb8a290a89d): <
https://commits.webkit.org/305413.441@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4668 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug