Cherry-pick cf8d02e5b70c. rdar://172273476

[threaded-animations] Safari 26.4 crashes loading https://business.southwest.com/apple
    https://bugs.webkit.org/show_bug.cgi?id=309655
    rdar://170883110

    Reviewed by Alan Baradlay.

    The assumption that because `filter` is in the list of animated properties we are guaranteed
    to have non-empty filter values to work with is incorrect as an animation can provide a keyframe
    rule such as this one on this Southwest page:

    ```
    @keyframes planeIn {
        from {
            translate: -50px 50px;
        }
        to {
            -webkit-filter: none;
                    filter: none;
            opacity: 1;
            scale: 1;
            translate: 0 0;
        }
    }

    ```

    We fix this by removing the incorrect assertion and instead check whether `longestFilterList()`
    returned a non-null `FilterOperations` pointer to determine whether filters are indeed animated.

    Note that a keyframe rule like this one would still crash:

    ```
    @keyframes empty-filter {
        to { filter: none }
    }
    ```

    Indeed, in this case we would create an empty set of presentation modifiers which would trigger
    an exception. This likely isn't a very common case, so we're fixing the known issue in this simple
    patch and will tackle this more involved issue in bug 309656.

    Test: webanimations/threaded-animations/empty-filter-animation-crash.html

    * LayoutTests/webanimations/threaded-animations/empty-filter-animation-crash-expected.txt: Added.
    * LayoutTests/webanimations/threaded-animations/empty-filter-animation-crash.html: Added.
    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteAnimationStack.mm:
    (WebKit::RemoteAnimationStack::initEffectsFromMainThread):

    Canonical link: https://commits.webkit.org/309053@main

Identifier: 305413.441@safari-7624-branch