Source/WebKit/UIProcess/RemoteLayerTree/RemoteAnimationStack.mm
@@ -121,14 +121,16 @@ void RemoteAnimationStack::initEffectsFromMainThread(PlatformLayer *layer)
 
     auto computedValues = computeValues();
 
+    // While m_affectedLayerProperties may contain LayerProperty::Filter, in practice
+    // we could be in a situation where all `filter` values for this animation stack
+    // are `none`. In that case, longestFilterList() will return nullptr, so we can
+    // use this alone to determine whether this stack interpolates `filter`.
     auto* canonicalFilters = longestFilterList();
 
     auto numberOfPresentationModifiers = [&]() {
         size_t count = 0;
-        if (m_affectedLayerProperties.contains(LayerProperty::Filter)) {
-            ASSERT(canonicalFilters);
+        if (canonicalFilters)
             count += WebCore::PlatformCAFilters::presentationModifierCount(*canonicalFilters);
-        }
         if (m_affectedLayerProperties.contains(LayerProperty::Opacity))
             count++;
         if (m_affectedLayerProperties.contains(LayerProperty::Transform))
@@ -138,8 +140,8 @@ void RemoteAnimationStack::initEffectsFromMainThread(PlatformLayer *layer)
 
     m_presentationModifierGroup = [CAPresentationModifierGroup groupWithCapacity:numberOfPresentationModifiers];
 
-    if (m_affectedLayerProperties.contains(LayerProperty::Filter)) {
-        WebCore::PlatformCAFilters::presentationModifiers(computedValues.filter, longestFilterList(), m_filterPresentationModifiers, m_presentationModifierGroup);
+    if (canonicalFilters) {
+        WebCore::PlatformCAFilters::presentationModifiers(computedValues.filter, canonicalFilters, m_filterPresentationModifiers, m_presentationModifierGroup);
         for (auto& filterPresentationModifier : m_filterPresentationModifiers)
             [layer addPresentationModifier:filterPresentationModifier.second.get()];
     }
